fabric/testdata/out/ing_donut-post-api-internal-events-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\", \"fabric-event-scheduler.read\") -\u003e
      flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\", \"scope\",
      \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026 Path(\"/api/internal/events\")
      \u0026\u0026 Method(\"POST\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"e0340652-4fd4-11e9-9e4a-02c71e31bbc4","deployment-id":"d-27kxv9mag8z9hbrgy7y4gntd9j","pipeline-id":"l-stu8z4b4s9g6emmbbv9r45975"},"name":"donut-post-api-internal-events-all","namespace":"default"},"spec":{"rules":[{"host":"donut.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"donut","servicePort":"http"},"pathType":"ImplementationSpecific"}]}}, [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "fabric-event-scheduler.read") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/api/internal/events") && Method("POST")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-06-17T13:47:24Z"
  generation: 1
  labels:
    controller-uid: e0340652-4fd4-11e9-9e4a-02c71e31bbc4
    deployment-id: d-27kxv9mag8z9hbrgy7y4gntd9j
    pipeline-id: l-stu8z4b4s9g6emmbbv9r45975
  name: donut-post-api-internal-events-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: donut
    uid: e0340652-4fd4-11e9-9e4a-02c71e31bbc4
  resourceVersion: "1370351288"
  uid: 7016715f-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: donut.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: donut
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-accounting-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: donut
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
